# algorithm-exercises-py

./: .coveragerc  .editorconfig  .gitignore  .markdownlint.yaml  .pylintrc  .sonarcloud.properties  .yamllint  CONTRIBUTING.md  Dockerfile  Makefile  PIPENV_MIGRATION.md  Pipfile  README.md  SECURITY.md  compose.yaml  pyproject.toml  requirements.txt  setup.cfg  sonar-project.properties  tox.ini
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  docker-image.yml  gitleaks.yml  make-coverage-html.yml  markdown-lint.yml  prettier-json.yml  python-coverage.yml  python-lint.yml  python-test.yml  python.yml  snyk-code.yml  sonarcloud.yml  yamllint.yml
src/: main_test.py  problem0000.py  problem0000_test.py  problem0000template.py  problem0000template_test.py  problem0001.py  problem0001_test.py  problem0002.py  problem0002_test.py  problem0003.py  problem0003_test.py  problem0004.py  problem0004_test.py  problem0005.py  problem0005_alt.py  problem0005_bruteforce_test.py  problem0005_test.py  problem0006.py  problem0006_test.py  problem0007.py  problem0007_bruteforce_test.py  problem0007_test.py  problem0008.py  problem0008_test.py  problem0009.py  problem0009_test.py  problem0010.py  problem0010_bruteforce_test.py  problem0010_test.py  problem0011.py  problem0011_test.py  problem0012.py  problem0012_test.py  problem0013.py  problem0013_test.py  problem0014.py  problem0014_test.py  problem0015.py  problem0016_test.py  problem0019.py  (+8 more)
src/data/: problem0011.py  problem0013.py  problem0018.py
src/hackerrank/: solve_me_first.py  (+4 more)
(+289 files in other folders)
