[project]
name = "algorithm-exercises_py"
version = "0.0.1"
authors = [
  { name="Gonzalo Diaz", email="devel@gon.cl" },
]
description = "Project Euler algorithms exercises solved in Python 3, running with built-in unittest suit. Developed with TDD."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sir-gon/algorithm-exercises-py"
"Bug Tracker" = "https://github.com/sir-gon/algorithm-exercises-py/issues"
